@@ -1,0 +1,15 @@
+require File.expand_path(File.dirname(__FILE__) + '/../../spec_helper')
+ 
+describe "/tasks/update.js.rjs" do
+  include TasksHelper
+  
+  before(:each) do
+  end
+ 
+  it "no errors:" do
+  end
+
+  it "errors:" do
+  end
+
+end
