@@ -4,6 +4,11 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Thu, Apr 2, 2009
+---------------------------------------------------------------------
+- Added view specs for task#destroy, fixed a couple task related bugs.
+- Refactored view specs.
+
 Wed, Apr 1, 2009
 ---------------------------------------------------------------------
 - Finished [Edit Lead] views and view specs.
